# schema-first

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: testing.yaml
example/simple/: main.py  openapi.yaml
src/schema_first/: __init__.py
src/schema_first/loaders/: __init__.py  exc.py  yaml_loader.py
src/schema_first/openapi/: __init__.py  exc.py
src/schema_first/openapi/schemas/: base.py  constants.py  custom_fields.py  fields.py  validators.py
src/schema_first/specification/: __init__.py  spilli_api.py
tests/: conftest.py  test_specification.py  test_validator.py  utils.py
tests/_contrib/specs/v3.0/: api-with-examples.yaml  callback-example.yaml  link-example.yaml  petstore-expanded.yaml  petstore.yaml  uspto.yaml
tests/_contrib/specs/v3.1/: non-oauth-scopes.yaml  tictactoe.yaml  webhook-example.yaml
tests/_contrib/specs/v3.2/: api-with-examples.yaml  callback-example.yaml  link-example.yaml  non-oauth-scopes.yaml  petstore-expanded.yaml  petstore.yaml  tictactoe.yaml  uspto.yaml  webhook-example.yaml
tests/converter/: test_converter_boolean.py  test_converter_string.py
tests/loaders/yaml_loader/: test_loaders__yaml_loader__multiple_files.py  test_loaders__yaml_loader__parameters.py  test_yaml_loader__one_file.py
tests/objects/components_object/: conftest.py  test_components_object.py
tests/objects/contact_object/: conftest.py  contact_object.py
tests/objects/example_object/: conftest.py  test_example_object.py
tests/objects/external_docs_object/: conftest.py  test_external_docs_object.py
tests/objects/info_object/: conftest.py  test_info_object.py
tests/objects/license_object/: conftest.py  test_license_object.py
tests/objects/media_type_object/: conftest.py  test_media_type_object.py
tests/objects/openapi_object/: conftest.py  test_openapi_object.py
tests/objects/operation_object/: conftest.py  test_operation_object.py
tests/objects/operation_object/security_requirement_object/: conftest.py
tests/objects/path_item_object/: conftest.py  test_path_item_object.py
tests/objects/path_item_object/parameter_object/: conftest.py  test_parameter_object.py
tests/objects/paths_object/: conftest.py
tests/objects/request_body_object/: conftest.py  test_request_body_object.py
tests/objects/response_object/: conftest.py  test_response_object.py
tests/objects/response_object/header_object/: conftest.py
tests/objects/responses_object/: conftest.py
tests/objects/schema_object/: conftest.py  test_schema_object.py
tests/objects/schema_object/array_field/: test_array_field.py
tests/objects/schema_object/boolean_field/: conftest.py  test_boolean_field__schema.py
tests/objects/security_scheme_object/: conftest.py  test_security_scheme_object.py
tests/objects/server_object/: conftest.py  test_server_object.py
tests/objects/tag_object/: conftest.py  test_tag_object.py
tests/schemas/contact_object/: conftest.py
tests/schemas/info_object/: conftest.py
tests/schemas/license_object/: conftest.py  test_license_object.py
tests/schemas/server_object/: conftest.py  test_server_object.py
(+66 files in other folders)
