[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
authors = [
  {name = "Konstantin Fadeev", email = "fadeev@legalact.pro"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
  'marshmallow>=4.0.0',
  'PyYAML>=6.0.3'
]
description = "OpenAPI specification validator and converter to Marshmallow schemas."
license = {file = "LICENSE"}
name = "Schema-First"
readme = "README.md"
requires-python = ">=3.13"
version = "0.6.2"

[project.optional-dependencies]
dev = [
  "bandit>=1.9.3",
  "build>=1.4.0",
  'openapi-spec-validator>=0.7.2',
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "python-dotenv>=1.2.1",
  "twine==6.2.0"
]

[project.urls]
changelog = "https://github.com/flask-pro/schema-first/blob/master/CHANGES.md"
repository = "https://github.com/flask-pro/schema-first"

[tool.black]
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''
include = '\.pyi?$'
line-length = 100
skip-string-normalization = true
target-version = ['py313']

[tool.isort]
profile = "google"
src_paths = ["src", "tests"]

[tool.setuptools.packages.find]
include = ["schema_first*"]
where = ["src"]
